--- a/less/variables.less
+++ b/less/variables.less
@@ -1,7 +1,5 @@
 // Variables
 
 @brand-primary: #FF8000;
-@brand-success: #424242
-
-;
+@brand-success: #424242;
 @gray-lighter: lighten(#000, 93.5%);
