--- a/less/freelancer.less
+++ b/less/freelancer.less
@@ -23,7 +23,7 @@ a.active {
 }
 
 h1, h2, h3, h4, h5, h6 {
-	font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	text-transform: uppercase;
 	font-weight: 700;
 }
@@ -73,7 +73,10 @@ hr.star-primary:after {
 
 header {
 	text-align: center;
-	background: @brand-success;
+	background: rgba(255, 255, 255, .3);
+	background-image: url(../img/cropped-botanical-dimensions.jpg);
+	background-position: right bottom;
+	background-size: 100%;
 	color: white;
 	.container {
 		padding-top: 100px;
@@ -86,7 +89,7 @@ header {
 	.intro-text {
 		.name {
 			display: block;
-			font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+			font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 			text-transform: uppercase;
 			font-weight: 700;
 			font-size: 2em;
@@ -137,7 +140,7 @@ header {
 }
 
 .navbar {
-	font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	text-transform: uppercase;
 	font-weight: 700;
 	a:focus {
