--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,6 @@ hr.star-primary {
 }
 hr.star-light:after,
 hr.star-primary:after {
-  content: "\f005";
   font-family: FontAwesome;
   display: inline-block;
   position: relative;
@@ -66,12 +65,18 @@ header {
   background: rgba(255, 255, 255, 0.3);
   background-image: url(../img/cropped-botanical-dimensions.jpg);
   background-position: right bottom;
-  background-size: 100%;
+  background-size: cover;
   color: white;
+  text-shadow: 2px 2px 2px #000;
 }
 header .container {
   padding-top: 100px;
   padding-bottom: 50px;
+  background-color: rgba(255, 255, 255, 0.15);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 header img {
   display: block;
