--- a/less/freelancer.less
+++ b/less/freelancer.less
@@ -40,7 +40,7 @@ hr.star-primary {
 
 hr.star-light:after,
 hr.star-primary:after {
-    content: "\f005";
+    // content: "\f111";
     font-family: FontAwesome;
     display: inline-block;
     position: relative;
@@ -76,11 +76,17 @@ header {
 	background: rgba(255, 255, 255, .3);
 	background-image: url(../img/cropped-botanical-dimensions.jpg);
 	background-position: right bottom;
-	background-size: 100%;
+	background-size: cover;
 	color: white;
+	text-shadow: 2px 2px 2px #000;
 	.container {
 		padding-top: 100px;
 		padding-bottom: 50px;
+    background-color: rgba(255, 255, 255, 0.15);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 	}
 	img {
 		display: block;
